--- a/appfrontend/package.json
+++ b/appfrontend/package.json
@@ -10,7 +10,8 @@
     "@material-ui/icons": "^4.11.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
