--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,12 +6,8 @@ name: Node.js CI
 on:
   push:
     branches: [ master ]
-    paths:
-      - 'appfrontend/**'
   pull_request:
     branches: [ master ]
-    paths:
-      - 'appfrontend/**'
 
 jobs:
   build:
@@ -31,5 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm --prefix appfrontend ci
+    - run: npm install truffle@5.5.12
+    - run: truffle compile
     - run: npm --prefix appfrontend run build --if-present
     - run: npm --prefix appfrontend test
