--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,8 +26,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm --prefix appfrontend ci
+    - name: Install Truffle Globally
+      run: npm install truffle@5.5.12 -g
     - run: npm ci
+    - run: npm ci
+      working-directory: appfrontend
     - run: truffle compile
-    - run: npm --prefix appfrontend run build --if-present
-    - run: npm --prefix appfrontend test
+    - run: npm run build --if-present
+      working-directory: appfrontend
+    - run: npm test
+      working-directory: appfrontend
