--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,13 +26,24 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        
     - name: Install Truffle Globally
       run: npm install truffle@5.5.12 -g
-    - run: npm ci
-    - run: npm ci
+      
+    - name: Install Dependencies from Main Lockfile
+      run: npm ci
+      
+    - name: Install Dependencies from Frontend Lockfile
+      run: npm ci
       working-directory: appfrontend
-    - run: truffle compile
-    - run: npm run build --if-present
+      
+    - name: Compile Truffle Contracts
+      run: truffle compile
+      
+    - name: Build Frontend
+      run: CI=false npm run build --if-present #Override default behaviour as CI=true treats warnings as errors and fails build.
       working-directory: appfrontend
-    - run: npm test
+      
+    - name: Test Frontend
+      run: npm test
       working-directory: appfrontend
